Enable checker framework warnings on compile