@@ -24,6 +24,36 @@
 				<configuration>
 					<source>11</source>
 					<target>11</target>
+					<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
+					<compilerArguments>
+						<Xmaxerrs>100</Xmaxerrs>
+						<Xmaxwarns>100</Xmaxwarns>
+					</compilerArguments>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.checkerframework</groupId>
+							<artifactId>checker</artifactId>
+							<version>3.21.4</version>
+						</path>
+					</annotationProcessorPaths>
+					<annotationProcessors>
+						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+						<annotationProcessor>org.checkerframework.checker.optional.OptionalChecker</annotationProcessor>
+						<annotationProcessor>org.checkerframework.checker.regex.RegexChecker</annotationProcessor>
+						<annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor>
+					</annotationProcessors>
+					<compilerArgs>
+					 	<arg>-Awarns</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
